--- a/.github/workflows/BuildAndTest.yml
+++ b/.github/workflows/BuildAndTest.yml
@@ -21,10 +21,10 @@ jobs:
           dotnet-version: ${{ env.DOTNET_VERSION }}
 
       - name: Install dependencies
-        run: dotnet restore .\EducationalPlatform.sln
+        run: dotnet restore ../../EducationalPlatformBackend/EducationalPlatform.sln
 
       - name: Build
-        run: dotnet build .\EducationalPlatform.sln --configuration Release --no-restore
+        run: dotnet build ../../EducationalPlatformBackend/EducationalPlatform.sln --configuration Release --no-restore
 
       - name: Test
-        run: dotnet test .\EducationalPlatform.sln
+        run: dotnet test ../../EducationalPlatformBackend/EducationalPlatform.sln
