--- a/EducationalPlatformBackend/EducationalPlatform.API/EducationalPlatform.API.csproj
+++ b/EducationalPlatformBackend/EducationalPlatform.API/EducationalPlatform.API.csproj
@@ -11,4 +11,15 @@
       <ProjectReference Include="..\EducationPlatform.Infrastructure\EducationPlatform.Infrastructure.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Serilog.AspNetCore" Version="7.0.0" />
+      <PackageReference Include="Swashbuckle.AspNetCore.Swagger" Version="6.5.0" />
+      <PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="6.5.0" />
+      <PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" Version="6.5.0" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="logs" />
+    </ItemGroup>
+
 </Project>
