Create Entities for Authentication and create Database with code-first approach with EntityFramework Core 7

--- a/EducationalPlatformBackend/EducationalPlatform.API/appsettings.Development.json
+++ b/EducationalPlatformBackend/EducationalPlatform.API/appsettings.Development.json
@@ -21,5 +21,8 @@
       }
     ],
     "Enrich": [ "FromLogContext" ]
+  },
+  "ConnectionStrings": {
+    "EducationalPlatformDb": "Server=(localdb)\\mssqllocaldb;Database=EducationalPlatform;Trusted_Connection=True;"
   }
 }
