Create endpoint for registering user

--- a/EducationalPlatformBackend/EducationalPlatform.API/EducationalPlatform.API.csproj
+++ b/EducationalPlatformBackend/EducationalPlatform.API/EducationalPlatform.API.csproj
@@ -8,7 +8,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\EducationalPlatform.Application\EducationalPlatform.Application.csproj" />
-      <ProjectReference Include="..\EducationPlatform.Infrastructure\EducationPlatform.Infrastructure.csproj" />
+      <ProjectReference Include="..\EducationalPlatform.Infrastructure\EducationalPlatform.Infrastructure.csproj" />
     </ItemGroup>
 
     <ItemGroup>
