--- a/EducationalPlatformBackend/EducationalPlatform.Application/EducationalPlatform.Application.csproj
+++ b/EducationalPlatformBackend/EducationalPlatform.Application/EducationalPlatform.Application.csproj
@@ -16,6 +16,7 @@
       <PackageReference Include="MediatR" Version="12.0.1" />
       <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.2.2" />
       <PackageReference Include="Microsoft.Extensions.Logging" Version="7.0.0" />
+      <PackageReference Include="OneOf" Version="3.0.243" />
     </ItemGroup>
 
 </Project>
