--- a/EducationalPlatformBackend/EducationalPlatform.API/appsettings.json
+++ b/EducationalPlatformBackend/EducationalPlatform.API/appsettings.json
@@ -22,5 +22,14 @@
     ],
     "Enrich": [ "FromLogContext"]
   },
+  "ConnectionStrings": {
+    "EducationalPlatformDb": "ConnectionString"
+  },
+  "Authentication": {
+    "SecretKey": "SECRET_KEY",
+    "Issuer": "Issuer",
+    "Audience": "Audience",
+    "ExpireHours": 1
+  },
   "AllowedHosts": "*"
 }
