--- a/.github/workflows/BuildAndTest.yml
+++ b/.github/workflows/BuildAndTest.yml
@@ -8,6 +8,9 @@ on:
     branches:
       - '**'
 
+env:
+  DOTNET_VERSION: "7.0.x"
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -18,7 +21,7 @@ jobs:
       - name: Setup .NET
         uses: actions/setup-dotnet@v3
         with:
-          dotnet-version: "7.0.x"
+          dotnet-version: ${{ env.DOTNET_VERSION }}
 
       - name: App Settings Variable Substitution
         uses: microsoft/variable-substitution@v1
