Add jwt configuration. Refactor OneOf usage

--- a/EducationalPlatformBackend/EducationalPlatform.API/appsettings.Development.json
+++ b/EducationalPlatformBackend/EducationalPlatform.API/appsettings.Development.json
@@ -24,5 +24,11 @@
   },
   "ConnectionStrings": {
     "EducationalPlatformDb": "Server=(localdb)\\mssqllocaldb;Database=EducationalPlatform;Trusted_Connection=True;"
+  },
+  "Authentication": {
+    "SecretKey": "EDUCATIONAL_PLATFORM_KEY_PRIVATE_DONT_SHARE_FDOFNNDFHBDBNFKNDKFNDKFNDKLNFJKDNFJKDNFKJ",
+    "Issuer": "https://educationalplatform.pl",
+    "Audience": "https://educationalplatform.pl",
+    "ExpireHours": 5
   }
 }
