--- a/EducationalPlatformBackend/EducationalPlatform.Infrastructure/EducationalPlatform.Infrastructure.csproj
+++ b/EducationalPlatformBackend/EducationalPlatform.Infrastructure/EducationalPlatform.Infrastructure.csproj
@@ -8,10 +8,12 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\EducationalPlatform.Application\EducationalPlatform.Application.csproj" />
       <ProjectReference Include="..\EducationalPlatform.Domain\EducationalPlatform.Domain.csproj" />
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="7.0.5" />
       <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
       <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.5" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.5">
