Add pseudo-implementation for sending emails/notification

--- a/EducationalPlatformBackend/EducationalPlatform.API/appsettings.Development.json
+++ b/EducationalPlatformBackend/EducationalPlatform.API/appsettings.Development.json
@@ -30,5 +30,6 @@
     "Issuer": "https://educationalplatform.pl",
     "Audience": "https://educationalplatform.pl",
     "ExpireHours": 5
-  }
+  },
+  "ApplicationUrl": "https://localhost:7038/"
 }
