--- a/EducationalPlatformBackend/EducationalPlatform.Application/EducationalPlatform.Application.csproj
+++ b/EducationalPlatformBackend/EducationalPlatform.Application/EducationalPlatform.Application.csproj
@@ -19,4 +19,10 @@
       <PackageReference Include="OneOf" Version="3.0.243" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Reference Include="Microsoft.Extensions.Configuration.Abstractions">
+        <HintPath>..\..\..\Program Files\dotnet\shared\Microsoft.AspNetCore.App\7.0.3\Microsoft.Extensions.Configuration.Abstractions.dll</HintPath>
+      </Reference>
+    </ItemGroup>
+
 </Project>
