--- a/EducationalPlatformBackend/EducationalPlatform.Application/EducationalPlatform.Application.csproj
+++ b/EducationalPlatformBackend/EducationalPlatform.Application/EducationalPlatform.Application.csproj
@@ -18,6 +18,7 @@
       <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="7.0.0" />
       <PackageReference Include="Microsoft.Extensions.Logging" Version="7.0.0" />
       <PackageReference Include="OneOf" Version="3.0.243" />
+      <PackageReference Include="Polly" Version="7.2.4" />
     </ItemGroup>
     
 </Project>
