--- a/EducationalPlatformBackend/EducationalPlatform.API/appsettings.json
+++ b/EducationalPlatformBackend/EducationalPlatform.API/appsettings.json
@@ -1,6 +1,9 @@
 {
   "Serilog": {
-    "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File" ],
+    "Using": [
+      "Serilog.Sinks.Console",
+      "Serilog.Sinks.File"
+    ],
     "MinimumLevel": {
       "Default": "Information",
       "Override": {
@@ -9,7 +12,9 @@
       }
     },
     "WriteTo": [
-      { "Name": "Console" },
+      {
+        "Name": "Console"
+      },
       {
         "Name": "File",
         "Args": {
@@ -20,7 +25,9 @@
         }
       }
     ],
-    "Enrich": [ "FromLogContext"]
+    "Enrich": [
+      "FromLogContext"
+    ]
   },
   "ConnectionStrings": {
     "EducationalPlatformDb": "ConnectionString"
@@ -32,5 +39,13 @@
     "ExpireHours": 1
   },
   "ApplicationUrl": "",
+  "Mailing": {
+    "SmtpServer": "",
+    "From": "",
+    "FromName": "",
+    "Port": 123,
+    "UserName": "",
+    "Password": ""
+  },
   "AllowedHosts": "*"
 }
