Add blob storage configuration

--- a/EducationalPlatformBackend/EducationalPlatform.API/appsettings.Development.json
+++ b/EducationalPlatformBackend/EducationalPlatform.API/appsettings.Development.json
@@ -31,5 +31,9 @@
     "Audience": "https://educationalplatform.pl",
     "ExpireHours": 5
   },
+  "AzureBlobStorage": {
+    "Container": "UseDevelopmentStorage=true",
+    "ContainerName": "educational-platform"
+  },
   "ApplicationUrl": "https://localhost:7038/"
 }
