--- a/EducationalPlatformBackend/EducationalPlatform.API/appsettings.json
+++ b/EducationalPlatformBackend/EducationalPlatform.API/appsettings.json
@@ -47,5 +47,9 @@
     "UserName": "",
     "Password": ""
   },
+  "AzureBlobStorage": {
+    "Container": "",
+    "ContainerName": ""
+  },
   "AllowedHosts": "*"
 }
