--- a/EducationalPlatformBackend/EducationalPlatform.Infrastructure/EducationalPlatform.Infrastructure.csproj
+++ b/EducationalPlatformBackend/EducationalPlatform.Infrastructure/EducationalPlatform.Infrastructure.csproj
@@ -13,6 +13,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="Azure.Storage.Blobs" Version="12.16.0" />
       <PackageReference Include="MailKit" Version="4.1.0" />
       <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="7.0.5" />
       <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
