--- a/EducationalPlatformBackend/EducationalPlatform.Domain/EducationalPlatform.Domain.csproj
+++ b/EducationalPlatformBackend/EducationalPlatform.Domain/EducationalPlatform.Domain.csproj
@@ -7,6 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="2.2.0" />
       <PackageReference Include="MimeKit" Version="4.1.0" />
       <PackageReference Include="OneOf" Version="3.0.243" />
     </ItemGroup>
