Add tests for University.cs

--- a/EducationalPlatformBackend/EducationalPlatform.Domain/EducationalPlatform.Domain.csproj
+++ b/EducationalPlatformBackend/EducationalPlatform.Domain/EducationalPlatform.Domain.csproj
@@ -12,4 +12,10 @@
       <PackageReference Include="OneOf" Version="3.0.243" />
     </ItemGroup>
 
+    <ItemGroup>
+        <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleTo">
+            <_Parameter1>EducationalPlatform.Domain.Tests</_Parameter1>
+        </AssemblyAttribute>
+    </ItemGroup>
+    
 </Project>
