--- a/EducationalPlatformBackend/EducationalPlatform.Application/EducationalPlatform.Application.csproj
+++ b/EducationalPlatformBackend/EducationalPlatform.Application/EducationalPlatform.Application.csproj
@@ -21,5 +21,11 @@
       <PackageReference Include="OneOf" Version="3.0.243" />
       <PackageReference Include="Polly" Version="7.2.4" />
     </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Academy\Course\" />
+      <Folder Include="Academy\Faculty\" />
+      <Folder Include="Academy\Subject\" />
+    </ItemGroup>
     
 </Project>
