Update appsettings to log ef queries

--- a/EducationalPlatformBackend/EducationalPlatform.API/appsettings.Development.json
+++ b/EducationalPlatformBackend/EducationalPlatform.API/appsettings.Development.json
@@ -1,15 +1,21 @@
 {
   "Serilog": {
-    "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File" ],
+    "Using": [
+      "Serilog.Sinks.Console",
+      "Serilog.Sinks.File"
+    ],
     "MinimumLevel": {
       "Default": "Information",
       "Override": {
         "Microsoft": "Warning",
-        "System": "Warning"
+        "System": "Warning",
+        "Microsoft.EntityFrameworkCore.Database.Command": "Information"
       }
     },
     "WriteTo": [
-      { "Name": "Console" },
+      {
+        "Name": "Console"
+      },
       {
         "Name": "File",
         "Args": {
@@ -20,7 +26,9 @@
         }
       }
     ],
-    "Enrich": [ "FromLogContext" ]
+    "Enrich": [
+      "FromLogContext"
+    ]
   },
   "ConnectionStrings": {
     "EducationalPlatformDb": "Server=(localdb)\\mssqllocaldb;Database=EducationalPlatform;Trusted_Connection=True;"
