--- a/EducationalPlatformBackend/EducationalPlatform.API/appsettings.json
+++ b/EducationalPlatformBackend/EducationalPlatform.API/appsettings.json
@@ -8,7 +8,8 @@
       "Default": "Information",
       "Override": {
         "Microsoft": "Warning",
-        "System": "Warning"
+        "System": "Warning",
+        "Microsoft.EntityFrameworkCore.Database.Command": "Information"
       }
     },
     "WriteTo": [
