Add action for adding didactic materials

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,9 @@ riderModule.iml
 **/logs/
 **.DotSettings.user
 **/node_modules/
+**/.futdcache.v1
+**/.suo
+**.vsidx
+**.metadata.v2
+**.projects.v2
+**/read.lock
