Add account confirmation on frontend

--- a/EducationalPlatformBackend/EducationalPlatform.API/appsettings.Development.json
+++ b/EducationalPlatformBackend/EducationalPlatform.API/appsettings.Development.json
@@ -43,5 +43,5 @@
     "Container": "UseDevelopmentStorage=true",
     "ContainerName": "educational-platform"
   },
-  "ApplicationUrl": "https://localhost:7038/"
+  "ApplicationUrl": "http://localhost:3000/"
 }
