--- a/educational-platform-frontend/.env.production
+++ b/educational-platform-frontend/.env.production
@@ -1,1 +1,1 @@
-REACT_APP_BACKEND_URL=educational-platform.azurewebsites.net/
+REACT_APP_BACKEND_URL=https://educational-platform.azurewebsites.net/
