--- a/.github/workflows/master_educational-platform.yml
+++ b/.github/workflows/master_educational-platform.yml
@@ -6,7 +6,7 @@ name: Build and deploy ASP.Net Core app to Azure Web App - educational-platform
 on:
   push:
     branches:
-      - master
+      - deploy
   workflow_dispatch:
 
 jobs:
