--- a/EducationalPlatformBackend/EducationalPlatform.Domain/EducationalPlatform.Domain.csproj
+++ b/EducationalPlatformBackend/EducationalPlatform.Domain/EducationalPlatform.Domain.csproj
@@ -7,13 +7,8 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="7.0.0" />
         <PackageReference Include="OneOf" Version="3.0.243"/>
-    </ItemGroup>
-
-    <ItemGroup>
-      <Reference Include="Microsoft.Extensions.Caching.Abstractions">
-        <HintPath>..\..\..\Program Files\dotnet\shared\Microsoft.AspNetCore.App\7.0.3\Microsoft.Extensions.Caching.Abstractions.dll</HintPath>
-      </Reference>
     </ItemGroup>
     
 </Project>
